--- a/functions-basic.qmd
+++ b/functions-basic.qmd
@@ -22,6 +22,10 @@ https://de.wikipedia.org/wiki/Exponentielles_Wachstum
 
 https://www.rhetos.de/html/lex/exponentielle_saettigungsfunktion.htm
 
+$$
+  \sum_{n=0}^N r^n = \cfrac{r^{N + 1} -1}{r - 1}
+$$
+
 ```{r}
 #| echo: false
 #| message: false
