--- a/functions-basic.qmd
+++ b/functions-basic.qmd
@@ -24,7 +24,7 @@ cbbPalette <- c("#000000", "#E69F00", "#56B4E9", "#009E73",
 ```
 
 
-## Funktionen
+## Lineare Funktion
 
 ## Exponentialfunktion
 
@@ -151,32 +151,5 @@ tibble(x = 0:30,
   geom_point()
 ```
 
-```{r}
-#| echo: false
-#| message: false
-#| warning: false
-#| label: fig-normal-02
-#| fig-align: center
-#| fig-height: 5
-#| fig-width: 5
-#| fig-cap: "Histogramm verschiedener Normalverteilungen mit unterschiedlichen Mittelwerten."
-#| fig-subcap: 
-#|   - "Drei Normalverteilungen mit Varianzhomogenität."
-#|   - "Drei Normalverteilungen unter Varianzheterogenität."
-#| layout-nrow: 1
-#| column: page
 
-plot_tbl <- tibble(x = seq(-12, 12, 0.1),
-                   y = x^3 - 3*x^2 - 144*x + 432)
-
-ggplot(plot_tbl, aes(x, y)) +
-  geom_line() +
-  theme_radar()
-
-plot_tbl <- tibble(x = seq(1, 10, 0.1),
-                   y = x^3)
-
-ggplot(plot_tbl, aes(x, y)) +
-  geom_line()
-```
 
