--- a/functions-preface.qmd
+++ b/functions-preface.qmd
@@ -2,7 +2,7 @@
 pacman::p_load(tidyverse, readxl, knitr, kableExtra, Hmisc)
 ```
 
-# Mathematische Funktionen {#sec-prob-basic}
+# Von mathematischen Funktionen {#sec-prob-basic}
 
 *Version vom `r format(Sys.time(), '%B %d, %Y um %H:%M:%S')`*
 
