--- a/probability-basic.qmd
+++ b/probability-basic.qmd
@@ -55,3 +55,9 @@ In @tbl-logical-figures
 : Test {#tbl-logical-figures}
 
 ## Bedingte Wahrscheinlichkeiten {#sec-prob-cond}
+
+## Wahrscheinlichkeitsverteilungen {#sec-prob-dist}
+
+https://rstudio-pubs-static.s3.amazonaws.com/35515_c4ea4e9714af4d888bfc701a37c39815.html
+
+https://yutannihilation.github.io/allYourFigureAreBelongToUs/ggfortify/ggdistribution/
