--- a/functions-extrem-stamm.qmd
+++ b/functions-extrem-stamm.qmd
@@ -23,9 +23,21 @@ Wie immer gilt, wir schauen uns hier nur einen kleinen Teilabriss der Thematik a
 
 ## Differentialrechnung
 
+$$
+\begin{aligned} 
+f(x) &= x^2 +4x + 3\\
+f'(x) &= 2x + 4
+\end{aligned}
+$$
 
 ## Integralrechnung
 
+$$
+\begin{aligned} 
+f(x) &= x^2 +4x + 3\\
+F(x) &= \cfrac{1}{3} \cdot x^3 + \cfrac{1}{2} \cdot 4x^2 + 3x
+\end{aligned}
+$$
 
 ## Quadratische Gleichung lösen
 
@@ -43,13 +55,50 @@ Die Lösungen der allgemeinen quadratischen Gleichung $ax^2 + bx + c = 0$ ist da
 $$
 x_{1/2} = \cfrac{-b \pm\sqrt{b^2 - 4 \cdot a \cdot c}}{2 \cdot a}
 $$
+Und einmal ein Beispiel.
 
+$$
+\begin{aligned} 
+26 &= 5x^2 +4x\\
+5x^2 + 4x - 26 &= 0 \\
+\end{aligned}
+$$
+Dann setzen wir alles einmal ein.
+
+$$
+\begin{aligned} 
+x_{1/2} &= \cfrac{-4 \pm\sqrt{4^2 - 4 \cdot 5 \cdot (-26)}}{2 \cdot 5}\\
+&= \cfrac{-4 \pm\sqrt{16 -(-520)}}{10}\\
+&= \cfrac{-4 \pm 23.15}{10}\\
+x_1 = 1.92&; \; x_2 = -2.72
+\end{aligned}
+$$
 
 ### p-q-Formel
 
 Bei Vorliegen der Normalform $x^2 + px + q = 0$ lauten die Lösungen nach der p-q-Formel wie folgt.
 
 $$
-x_{1,2} = - \cfrac{p}{2}\pm\sqrt{\left(\cfrac{p}2\right)^2 - q}
+x_{1,2} = - \cfrac{p}{2}\pm\sqrt{\left(\cfrac{p}{2}\right)^2 - q}
+$$
+Und einmal ein Beispiel.
+
+$$
+\begin{aligned} 
+26 &= 5x^2 +4x\\
+x^2 + \cfrac{4}{5}x - \cfrac{26}{5} &= 0 \\
+x^2 + 0.8x - 5.2 &= 0 \\
+\end{aligned}
 $$
 
+Dann setzen wir alles einmal ein.
+
+$$
+\begin{aligned} 
+x_{1,2} &= - \cfrac{0.8}{2}\pm\sqrt{\left(\cfrac{0.8}{2}\right)^2 - (-5.2)}\\
+&= - 0.4\pm\sqrt{0.4^2 + 5.2}\\
+&= - 0.4\pm\sqrt{5.36}\\
+&= - 0.4\pm2.32\\
+x_1 = 1.92&; \; x_2 = -2.72
+\end{aligned}
+$$
