--- a/functions-extrem-stamm.qmd
+++ b/functions-extrem-stamm.qmd
@@ -70,8 +70,13 @@ $$
 x_{1/2} &= \cfrac{-4 \pm\sqrt{4^2 - 4 \cdot 5 \cdot (-26)}}{2 \cdot 5}\\
 &= \cfrac{-4 \pm\sqrt{16 -(-520)}}{10}\\
 &= \cfrac{-4 \pm 23.15}{10}\\
-x_1 = 1.92&; \; x_2 = -2.72
 \end{aligned}
+$$
+
+Damit ergibt sich dann eine Lösung für $x_{1,2}$ wie folgt.
+
+$$
+x_1 = 1.92; \; x_2 = -2.72
 $$
 
 ### p-q-Formel
@@ -86,6 +91,7 @@ Und einmal ein Beispiel.
 $$
 \begin{aligned} 
 26 &= 5x^2 +4x\\
+5x^2 + 4x - 26 &= 0 \\
 x^2 + \cfrac{4}{5}x - \cfrac{26}{5} &= 0 \\
 x^2 + 0.8x - 5.2 &= 0 \\
 \end{aligned}
@@ -98,7 +104,12 @@ $$
 x_{1,2} &= - \cfrac{0.8}{2}\pm\sqrt{\left(\cfrac{0.8}{2}\right)^2 - (-5.2)}\\
 &= - 0.4\pm\sqrt{0.4^2 + 5.2}\\
 &= - 0.4\pm\sqrt{5.36}\\
-&= - 0.4\pm2.32\\
-x_1 = 1.92&; \; x_2 = -2.72
+&= - 0.4\pm2.32
 \end{aligned}
+$$
+
+Damit ergibt sich dann eine Lösung für $x_{1,2}$ wie folgt.
+
+$$
+x_1 = 1.92; \; x_2 = -2.72
 $$
